syntax = "proto3";

package io.protostuff.it;

message PrimitiveFieldTestMsg {
    double double = 1;
    float float = 2;
    int32 int32 = 3;
    int64 int64 = 3;
    uint32 unsigned_int32 = 3;
    uint64 unsigned_int64 = 3;
    sint32 signed_int32 = 3;
    sint64 signed_int64 = 3;
    fixed32 fixed32 = 3;
    fixed64 fixed64 = 3;
    fixed32 signed_fixed32 = 3;
    fixed64 signed_fixed64 = 3;
    bool bool = 3;
    string string = 3;
    bytes bytes = 3;
}